# charsiug2p-tvm

./: .gitignore  .gitmodules  AGENTS.md  TODOs.md  dist
NOTES/: CHARSIUG2P_ANALYSIS.md  CHARSIUG2P_TVM_PORTING_PLAN.md  IOS_BUILD_PROCESS.md  KV_CACHE_IMPLEMENTATION_PLAN.md  MISAKI_OVERVIEW.md  POST_PROCESSING.md  REPO_OVERVIEW.md  RUST_FLUTTER_BRIDGE_PLAN.md  RUST_POST_PROCESSING.md  RUST_TVM_FFI_FINDINGS.md  SHARED_TVM_RUNTIME_PLUGIN.md  TILELANG_FLASHATTN_NOTES.md  TVM_FFI_MACOS_LINKING.md  TVM_FFI_RUST.md  TVM_FFI_STATIC_LINKING_ISSUE.md  TVM_METAL.md  TVM_PROFILING.md  TVM_RELAX_MIXED_PRECISION.md  TVM_RELAX_STATIC_LINKING.md  TVM_RELAX_VM_ERROR_ISSUE.md
flutter/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/src/main/: AndroidManifest.xml
flutter/cargokit/: build_pod.sh
flutter/example/: README.md  pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/ios/Runner/: Info.plist
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: main.dart
flutter/example/linux/: CMakeLists.txt
flutter/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/example/linux/runner/: my_application.cc
flutter/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/example/macos/Runner.xcodeproj/: project.pbxproj
flutter/example/test/: widget_test.dart
flutter/example/web/: index.html  manifest.json
flutter/example/windows/: CMakeLists.txt
flutter/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/example/windows/runner/: Runner.rc  main.cpp
flutter/ios/: charsiug2p_flutter.podspec
flutter/ios/Classes/: CharsiuG2pFlutterPlugin.swift
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: charsiug2p_flutter.dart
flutter/lib/src/: api.dart  assets.dart  charsiug2p_bridge.dart  charsiug2p_flutter_web.dart  external_library.dart  external_library_io.dart  external_library_stub.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  platform_paths.dart
flutter/linux/: CMakeLists.txt  charsiug2p_flutter_plugin.cc
flutter/linux/include/charsiug2p_flutter/: charsiug2p_flutter_plugin.h
flutter/linux/runner/: my_application.cc
flutter/macos/: charsiug2p_flutter.podspec
flutter/macos/Classes/: CharsiuG2pFlutterPlugin.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/rust/: Cargo.toml
flutter/rust/src/: api.rs  frb_generated.rs
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt  charsiug2p_flutter_plugin.cpp  charsiug2p_flutter_plugin.h  charsiug2p_flutter_plugin_c_api.cpp
flutter/windows/include/charsiug2p_flutter/: charsiug2p_flutter_plugin_c_api.h
flutter/windows/runner/: Runner.rc  main.cpp
python/: .gitignore  README.md  pyproject.toml
python/scripts/: build_tvm.sh  kv_cache_mask_experiment.py
python/src/charsiug2p_tvm/: __init__.py  __main__.py  cli.py  config.py  eval.py  harness.py  misaki_analysis.py  post_processing.py  profile.py  tokenizer_export.py  tvm_compile.py  tvm_runtime.py
python/tests/: test_smoke.py
rust/: Cargo.toml  README.md  TODOs.md  test_static_link_e2e.sh
rust/g2p_cli/: Cargo.toml
rust/g2p_cli/src/: main.rs
rust/g2p_core/: Cargo.toml
rust/g2p_core/src/: lib.rs
rust/g2p_ffi/: Cargo.toml
rust/g2p_ffi/src/: api.rs  frb_generated.rs  lib.rs
rust/g2p_pipeline/: Cargo.toml
rust/g2p_pipeline/src/: artifacts.rs  lib.rs  post_processing.rs
rust/g2p_tokenizer/: Cargo.toml
rust/g2p_tokenizer/src/: lib.rs
rust/g2p_tvm/: Cargo.toml  build.rs
rust/g2p_tvm/scripts/: build_system_lib.py
rust/g2p_tvm/src/: lib.rs
rust/g2p_tvm/tests/: system_lib_smoke.rs
(+7 files in other folders)
