[package]
name = "charsiug2p-g2p-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "charsiug2p_g2p_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
charsiug2p-g2p-core = { path = "../g2p_core" }
charsiug2p-g2p-pipeline = { path = "../g2p_pipeline" }
charsiug2p-g2p-tokenizer = { path = "../g2p_tokenizer" }
charsiug2p-g2p-tvm = { path = "../g2p_tvm" }
flutter_rust_bridge = "2.0"
serde = { version = "1", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
serde_json = "1"
