[package]
name = "charsiug2p-g2p-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "charsiug2p_g2p_pipeline"
crate-type = ["lib"]

[dependencies]
charsiug2p-g2p-core = { path = "../g2p_core" }
charsiug2p-g2p-tokenizer = { path = "../g2p_tokenizer" }
charsiug2p-g2p-tvm = { path = "../g2p_tvm" }
tvm-ffi = { path = "../../external/tvm/3rdparty/tvm-ffi/rust/tvm-ffi" }
